<resources>
    <string name="app_name" translatable="false">Assistive Touch - Home Button</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Assistive Touch - Home Button, would \nyou mind rating us on the Google Play, then?</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="loading">Loading</string>
    <string name="please_select_a_language">Please select a language!</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="content_intro_3">Choose what to appear when you open your zip lock screen</string>
    <string name="intro_1">Assistive Touch</string>
    <string name="intro_2">Customize Icon Styles</string>
    <string name="intro_3">Assistive Volume</string>
    <string name="content_intro_1">Access your screen with style</string>
    <string name="content_intro_2">Choose your zip and row from our collection</string>
    <string name="get_started">Get started</string>
    <string name="permission">Permission</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app requires the following permissions to provide services for you:</string>
    <string name="overlay_draw">Overlay Draw</string>
    <string name="next2">NEXT</string>
    <string name="title_dialog_per">Grant these permissions to use <b>\"Assistive Touch - Home Button\"</b></string>
    <string name="content_dialog_per_noti">Note: You can also grant permission in <b>Settings -> Apps -> Assistive Touch - Home Button -> Notifications </b></string>
    <string name="content_dialog_per_camera">Note: You can also grant permission in <b>Settings -> Apps -> Assistive Touch - Home Button -> Camera </b></string>
    <string name="content_dialog_per_storage">Note: You can also grant permission in <b>Settings -> Apps -> Assistive Touch - Home Button -> Storage </b></string>
    <string name="content_dialog_per_overlay">Note: You can also grant permission in <b>Settings -> Display over other Apps -> Assistive Touch - Home Button</b></string>
    <string name="content_dialog_per_write_setting">Note: You can also grant permission in <b>Settings -> Change System Setting -> Assistive Touch - Home Button</b></string>
    <string name="content_dialog_per_accessibility">Note: You can also grant permission in <b>Settings -> Support -> Accessibility -> Assistive Touch - Home Button</b></string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="notification">Notification</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="enable_assistive_touch">Enable Assistive Touch</string>
    <string name="quickly_access_essential_functions_with_a_floating_button">Quickly access essential functions with a floating button</string>
    <string name="floating_icon">Floating Icon</string>
    <string name="custom_menu">Custom Menu</string>
    <string name="enable_assistive_volume">Enable Assistive Volume</string>
    <string name="adjust_volume_easily_with_a_floating_button">Adjust volume easily with a floating button</string>
    <string name="volume_config">Volume Config</string>
    <string name="button_style">Button Style</string>
    <string name="icon_style">Icon Style</string>
    <string name="single_tap">Single-tap</string>
    <string name="open_menu">Open menu</string>
    <string name="double_tap">Double-tap</string>
    <string name="none">None</string>
    <string name="long_press">Long Press</string>
    <string name="set_action_successfully">Set action successfully!</string>
    <string name="accessibility_service_description">This service helps to control the screen with floating buttons.</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="asisitive_touch_s_service_is_running">Assistive Touch\'s service is running</string>
    <string name="enable_assistive_touch_success">Enable Assistive touch successfully</string>
    <string name="disable_assistive_touch_success">Disable Assistive touch successfully!</string>
    <string name="power">Power</string>
    <string name="recent">Recent</string>
    <string name="favourite">Favourite</string>
    <string name="device">Device</string>
    <string name="screen_shoot">Screen shoot</string>
    <string name="wifi">Wifi</string>
    <string name="flashlight">Flashlight</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="select_function">Select function</string>
    <string name="tap_a_feature_to_change">Tap a feature to change</string>
    <string name="color">Color</string>
    <string name="restore">Restore</string>
    <string name="ok">OK</string>
    <string name="choose_color">Choose Color</string>
    <string name="back">Back</string>
    <string name="screen_recorder">Screen Recorder</string>
    <string name="all_app">All App</string>
    <string name="airplane">Airplane</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="location">Location</string>
    <string name="lock_rotation">Lock rotation</string>
    <string name="volume_option">Volume option</string>
    <string name="time_out">Time out</string>
    <string name="brightness">Brightness</string>
    <string name="volume_up">Volume up</string>
    <string name="volume_down">Volume down</string>
    <string name="selected">Selected</string>
    <string name="please_select_a_function_first">Please select a function first!</string>
    <string name="error">Error</string>
    <string name="auto_brightness">Auto Brightness</string>
    <string name="alarm">Alarm</string>
    <string name="voice_call">Voice Call</string>
    <string name="media">Media</string>
    <string name="ring">Ring</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="_15_seconds">15 seconds</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="_1_minute">1 minute</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="error_sd">Failed to get External Storage</string>
    <string name="error_record">Failed to create Recordings directory</string>
    <string name="unlock_rotation">Unlock rotation</string>
    <string name="finish">Finish</string>
    <string name="download_success">Capture screenshot successfully!</string>
    <string name="download_failed">Capture screenshot failed!</string>
    <string name="volume_options">Volume options</string>
    <string name="ringtone">Ringtone</string>
    <string name="call">Call</string>
    <string name="hide_button">Hide button</string>
    <string name="button_color">Button color</string>
    <string name="button_background_color">Button background color</string>
    <string name="button_transparency">Button Transparency</string>
    <string name="button_size">Button Size</string>
    <string name="phone_edge_distance">Phone edge distance</string>
    <string name="fix_button_position">Fix button position</string>
    <string name="choose_action">Choose Action</string>
    <string name="mute_media_volume">Mute media volume</string>
    <string name="open_notification">Open notification</string>
    <string name="screen_off">Screen off</string>
    <string name="enable_assistive_volume_success">Enable Assistive volume successfully!</string>
    <string name="disable_assistive_volume_success">Disable Assistive volume successfully!</string>
    <string name="change_system_settings">Change System Settings</string>
    <string name="accessibility_permission">Accessibility Permission</string>
    <string name="darkness">Darkness</string>
    <string name="recording_screen">Recording screen...</string>
    <string name="tap_to_stop_record">Tap to stop record</string>
    <string name="you_must_choose_at_least_1_volume_option">You must choose at least 1 volume option!</string>
    <string name="menu_1_already_reset">Menu 1 already reset!</string>
    <string name="menu_1_reset_successfully">Menu 1 reset successfully!</string>
    <string name="menu_2_already_reset">Menu 2 already reset!</string>
    <string name="menu_2_reset_successfully">Menu 2 reset successfully!</string>
    <string name="video_save_on">Video save on</string>
    <string name="image_save_on">Image capture save on</string>
    <string name="you_need_to_enable_device_admin_feature">You need to enable device admin feature!</string>
    <string name="allow_assistive_touch_to_lock_screen">Allow Assistive Touch to lock screen.</string>
    <string name="no" />
    <string name="this_function_is_only_use_by_system_app">This function is only use by system app!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="let_s_start">Let\'s Start</string>


</resources>