<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_29sdp"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_12sdp"
            android:ellipsize="end"
            android:fontFamily="@font/instrument_sans"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textStyle="bold"
            android:text="@string/permission"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/instrument_sans"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_dialog_per"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:fontFamily="@font/instrument_sans"
            android:includeFontPadding="false"
            android:text="@string/content_dialog_per_noti"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvStay"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_camera_access_deny"
                android:ellipsize="end"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/cancel"
                android:textColor="#52525B"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/tvAgree"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_camera_access_allow"
                android:ellipsize="end"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@string/go_to_setting"
                android:textColor="#000000"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>