<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/rating_0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/your_opinion_matter_to_us"
            android:textColor="#0066FF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then"
            android:textColor="#939191"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/rtb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:numStars="5"
            android:progressTint="#FFF732"
            android:secondaryProgressTint="#FFF732"
            android:stepSize="1"
            tools:ignore="UnusedAttribute" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:minWidth="48dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnRateUs"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/bg_camera_access_allow"
                android:ellipsize="end"
                android:fontFamily="@font/svn_gilroy"
                android:gravity="center"
                android:lines="1"
                android:minWidth="148dp"
                android:paddingHorizontal="12dp"
                android:text="@string/rate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnNotNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/bg_camera_access_deny"
                android:ellipsize="end"
                android:fontFamily="@font/svn_gilroy"
                android:gravity="center"
                android:lines="1"
                android:minWidth="148dp"
                android:minHeight="48dp"
                android:paddingHorizontal="12dp"
                android:text="@string/not_now"
                android:textColor="#cdcdcd"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>