<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:visibility="visible">

    <com.assistivetouch.easytouch.homebutton.util.widget.UiLinearLayout
        android:id="@+id/backgroundMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:bgColorLight="#cc000000"
        app:cornerRadius="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/instrument_sans"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/screen_timeout"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll15s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv15s"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_s" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_15_seconds"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll30s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv30s"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_30_seconds"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll1m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv1m"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_1_minute"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll5m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv5m"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_5_minutes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll10m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv10m"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_10_minutes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll15m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv15m"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_15_minutes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll30m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:minHeight="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv30m"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/time_out_button_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/_30_minutes"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="80dp"
            android:layout_marginTop="10dp"
            android:layout_height="80dp"
            android:padding="14dp"
            android:src="@drawable/arrow_left"/>
    </com.assistivetouch.easytouch.homebutton.util.widget.UiLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>