<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/bg_dialog_bottom"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/choose_action"
            android:fontFamily="@font/instrument_sans"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/llHideButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/ivHideButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/radio_volume_s" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/hide_button"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llScreenOff"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="24dp"
                android:id="@+id/ivScreenOff"
                android:layout_height="24dp"
                android:src="@drawable/radio_volume_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/screen_off"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llOpenNotification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/ivOpenNotification"
                android:src="@drawable/radio_volume_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/open_notification"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llMuteMedia"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/ivMuteMedia"
                android:src="@drawable/radio_volume_sn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/instrument_sans"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:text="@string/mute_media_volume"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/nativePopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible">

            <FrameLayout
                android:id="@+id/fr_ads_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <include layout="@layout/layout_native_load_large_cta_above" />
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>